--- a/templates/nfs/pvc.yaml
+++ b/templates/nfs/pvc.yaml
@@ -8,7 +8,7 @@ spec:
     - ReadWriteMany
   resources:
     requests:
-      storage: 500Mi
+      storage: {{ .Values.volBulkSize }}
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -20,4 +20,4 @@ spec:
     - ReadWriteMany
   resources:
     requests:
-      storage: 500Mi
+      storage: {{ .Values.volCacheSize }}
