--- a/values/prod.yaml
+++ b/values/prod.yaml
@@ -4,3 +4,5 @@ tld: io
 piracyIp: "143.244.47.87"
 nfsArray: "192.168.2.103"
 promHosts: ["192.168.2.103:9100"]
+volBulkSize: 14.4T 
+volCacheSize: 220G
