Basic borg config

--- a/values/shared.yaml
+++ b/values/shared.yaml
@@ -47,3 +47,4 @@ image_grafana: "grafana/grafana:10.1.9"
 image_promtail: "grafana/promtail:2.8.11"
 image_loki: "grafana/loki:2.8.11"
 image_registry: "registry:2"
+image_borgmatic: "b3vis/borgmatic:1.8"
