--- a/config/borgmatic/config.yaml
+++ b/config/borgmatic/config.yaml
@@ -15,24 +15,24 @@ source_directories:
     - /bulk/application/sonarr
     - /bulk/shared/books
 
-postgresql_databases:
-  - name: postgres
-    hostname: giteadb
-    username: postgres
-    password: ${GITEA_DB_PASSPHRASE}
-    format: tar
+# postgresql_databases:
+#   - name: postgres
+#     hostname: giteadb
+#     username: postgres
+#     password: ${GITEA_DB_PASSWORD}
+#     format: tar
 
-  - name: miniflux
-    hostname: minifluxdb
-    username: postgres
-    password: ${MINIFLUX_DB_PASSPHRASE}
-    format: tar
+#   - name: miniflux
+#     hostname: minifluxdb
+#     username: postgres
+#     password: ${MINIFLUX_DB_PASSWORD}
+#     format: tar
 
 repositories:
-    - path: /cache/application/borgmatic/backup
+    - path: /raw-backup
       label: local
 
 after_backup:
-    - cd /cache/application/borgmatic
-    - tar xvf backup.tar ./backup/*
-    - du -sh backup.tar
+    - cd /
+    - tar xvf ./tar-dir/backup.tar ./raw-backup
+    - du -sh ./tar-dir/backup.tar
