--- a/templates/borgmatic/cron.yaml
+++ b/templates/borgmatic/cron.yaml
@@ -53,6 +53,18 @@ spec:
                       name: gitea.db.password
                       key: value
 
+                - name: LINODE_CLI_OBJ_ACCESS_KEY
+                  valueFrom:
+                    secretKeyRef:
+                      name: linode.cli.obj.access.key
+                      key: value
+
+                - name: LINODE_CLI_OBJ_SECRET_KEY
+                  valueFrom:
+                    secretKeyRef:
+                      name: linode.cli.obj.secret.key
+                      key: value
+
               volumeMounts:
                 - name: bulk-data
                   mountPath: /bulk
@@ -89,12 +101,6 @@ spec:
                   valueFrom:
                     secretKeyRef:
                       name: gitea.db.password
-                      key: value
-
-                - name: LINODE_CLI_TOKEN
-                  valueFrom:
-                    secretKeyRef:
-                      name: linode.cli.token
                       key: value
 
                 - name: LINODE_CLI_OBJ_ACCESS_KEY
