--- a/.gitea/workflows/deploy.yaml
+++ b/.gitea/workflows/deploy.yaml
@@ -87,3 +87,5 @@ jobs:
           k8s_registry_certificate_key: ${{ secrets.K8S_REGISTRY_CERTIFICATE_KEY }}
           k8s_registry_htpasswd: ${{ secrets.K8S_REGISTRY_HTPASSWD }}
           k8s_backup_passphrase: ${{ secrets.K8S_BACKUP_PASSPHRASE }}
+          k8s_linode_cli_obj_access_key: ${{ secrets.K8S_LINODE_CLI_OBJ_ACCESS_KEY }}
+          k8s_linode_cli_obj_secret_key: ${{ secrets.K8S_LINODE_CLI_OBJ_SECRET_KEY }}
