Add the lounge deployment

--- a/values/shared.yaml
+++ b/values/shared.yaml
@@ -1,28 +1,3 @@
-# image_dind: docker:23.0.6-dind
-# image_jellyfin: "linuxserver/jellyfin"
-# image_nginx: "nginx"
-# image_wireguard: "linuxserver/wireguard"
-# image_qbittorrent: "linuxserver/qbittorrent"
-# image_radarr: "linuxserver/radarr"
-# image_sonarr: "linuxserver/sonarr"
-# image_prowlarr: "linuxserver/prowlarr"
-# image_autobrr: "ghcr.io/autobrr/autobrr"
-# image_ldap_user_manager: "wheelybird/ldap-user-manager" 
-# image_openldap: "osixia/openldap"
-# image_miniflux_db: "postgres"
-# image_miniflux: "miniflux/miniflux"
-# image_gitea_runner: "gitea/act_runner"
-# image_gitea_renovate: "renovate/renovate"
-# image_gitea: "gitea/gitea"
-# image_gitea_db: "postgres"
-# image_calibre: "linuxserver/calibre-web"
-# image_authelia: "authelia/authelia"
-# image_prometheus: "bitnami/prometheus"
-# image_grafana: "grafana/grafana"
-# image_promtail: "grafana/promtail"
-# image_loki: "grafana/loki"
-# image_registry: "registry:2"
-
 image_dind: docker:23.0.6-dind
 image_jellyfin: "linuxserver/jellyfin:10.8.13"
 image_nginx: "nginx:stable-alpine3.17-slim"
@@ -48,3 +23,4 @@ image_promtail: "grafana/promtail:2.9.7"
 image_loki: "grafana/loki:3.0.0"
 image_registry: "registry:2"
 image_borgmatic: "b3vis/borgmatic:1.8"
+image_thelounge: "linuxserver/thelounge:4.4.3-next"
