--- a/config/nginx/conf.d/irc.conf
+++ b/config/nginx/conf.d/irc.conf
@@ -2,7 +2,7 @@ server {
   listen 443 ssl;
   include https.conf;
 
-  server_name scurvy.*;
+  server_name irc.*;
 
   fastcgi_buffers 16 16k;
   fastcgi_buffer_size 32k;
@@ -13,6 +13,7 @@ server {
     include authelia-proxy.conf;
     include authelia-endpoint.conf;
 
-    proxy_pass http://vpn:8080;
+    proxy_pass http://vpn:9000;
   }
 }
+
