--- a/templates/vpn/depl.yaml
+++ b/templates/vpn/depl.yaml
@@ -1,17 +1,17 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: qbittorrent
+  name: vpn
 spec:
   selector:
     matchLabels:
-      app: qbittorrent
+      app: vpn
   replicas: 1
   template:
     metadata:
       labels:
-        app: qbittorrent
-        app.kubernetes.io/name: qbittorrent
+        app: vpn
+        app.kubernetes.io/name: vpn
     spec:
       securityContext:
         sysctls:
@@ -99,3 +99,20 @@ spec:
             - name: cache-data
               mountPath: /cache/torrents
               subPath: shared/torrents
+
+        - name: thelounge
+          image: {{ .Values.image_thelounge }}
+          ports:
+            - containerPort: 9000
+
+          env:
+            - name: PUID
+              value: "0"
+
+            - name: PGID
+              value: "0"
+
+          volumeMounts:
+            - name: data
+              mountPath: /config
+              subPath: application/thelounge
