--- a/values/shared.yaml
+++ b/values/shared.yaml
@@ -4,6 +4,7 @@ image_nginx: "nginx:stable-alpine3.17-slim"
 image_wireguard: "linuxserver/wireguard:1.0.20210914-legacy"
 image_qbittorrent: "linuxserver/qbittorrent:4.6.4"
 image_radarr: "linuxserver/radarr:5.4.6"
+image_readarr: "linuxserver/readarr:0.3.25-nightly"
 image_sonarr: "linuxserver/sonarr:4.0.4"
 image_prowlarr: "linuxserver/prowlarr:1.16.2"
 image_autobrr: "ghcr.io/autobrr/autobrr:1.41.0"
