Basic calibre config

--- a/values/shared.yaml
+++ b/values/shared.yaml
@@ -16,7 +16,8 @@ image_gitea_runner: "gitea/act_runner:0.2.10"
 image_gitea_renovate: "renovate/renovate:37-slim"
 image_gitea: "gitea/gitea:1.21.11"
 image_gitea_db: "postgres:16.2-alpine3.19"
-image_calibre: "linuxserver/calibre-web:0.6.21"
+image_calibre_web: "linuxserver/calibre-web:0.6.21"
+image_calibre: "linuxserver/calibre:7.10.0"
 image_authelia: "authelia/authelia:4.38"
 image_prometheus: "bitnami/prometheus:2.51.2"
 image_grafana: "grafana/grafana:10.4.2"
