--- a/templates/calibre-web/depl.yaml
+++ b/templates/calibre-web/depl.yaml
@@ -1,17 +1,17 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: calibre
+  name: calibre-web
 spec:
   selector:
     matchLabels:
-      app: calibre
+      app: calibre-web
   replicas: 1
   template:
     metadata:
       labels:
-        app: calibre
-        app.kubernetes.io/name: calibre
+        app: calibre-web
+        app.kubernetes.io/name: calibre-web
     spec:
       volumes:
         - name: data
@@ -19,13 +19,15 @@ spec:
             claimName: bulk-nfs
 
       containers:
-        - name: calibre
-          image: {{ .Values.image_calibre }}
+        - name: calibre-web
+          image: {{ .Values.image_calibre_web }}
           ports:
-            - containerPort: 8080
-            - containerPort: 8081
+            - containerPort: 8083
 
           env:
+            - name: DOCKER_MODS
+              value: linuxserver/mods:universal-calibre
+
             - name: PUID
               value: "0"
 
@@ -35,7 +37,7 @@ spec:
           volumeMounts:
             - name: data
               mountPath: /config
-              subPath: application/calibre
+              subPath: application/calibre-web
 
             - name: data
               mountPath: /books
