--- a/templates/calibre/svc.yaml
+++ b/templates/calibre/svc.yaml
@@ -12,7 +12,7 @@ spec:
       port: 80
       targetPort: 8080
 
-    - name: content server
+    - name: content-server
       protocol: TCP
       port: 8081
       targetPort: 8081
