--- a/config/nginx/conf.d/calibre.conf
+++ b/config/nginx/conf.d/calibre.conf
@@ -9,13 +9,16 @@ server {
 
   include authelia-location.conf;
 
-  location / { 
-    proxy_http_version 1.1; 
-    proxy_set_header  Authorization $http_authorization; 
-    proxy_pass_header Authorization; 
-    proxy_set_header Upgrade $http_upgrade; 
-    proxy_set_header Connection "Upgrade"; 
-    proxy_set_header Host $host; 
-    proxy_pass http://calibre; 
-  } 
+  location / {
+    include authelia-proxy.conf;
+    include authelia-endpoint.conf;
+
+    proxy_http_version 1.1;
+    proxy_set_header Authorization $http_authorization;
+    proxy_pass_header Authorization;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "Upgrade";
+    proxy_set_header Host $host;
+    proxy_pass http://calibre;
+  }
 }
