Move arr deployments to vpn

--- a/config/nginx/conf.d/readarr.conf
+++ b/config/nginx/conf.d/readarr.conf
@@ -13,6 +13,6 @@ server {
     include authelia-proxy.conf;
     include authelia-endpoint.conf;
 
-    proxy_pass http://readarr;
+    proxy_pass http://vpn:8787;
   }
 }
