--- a/config/nginx/conf.d/movies.conf
+++ b/config/nginx/conf.d/movies.conf
@@ -13,6 +13,6 @@ server {
     include authelia-proxy.conf;
     include authelia-endpoint.conf;
 
-    proxy_pass http://radarr;
+    proxy_pass http://vpn:7878;
   }
 }
