--- a/templates/vpn/svc.yaml
+++ b/templates/vpn/svc.yaml
@@ -21,3 +21,18 @@ spec:
       name: prowlarr
       port: 9696
       targetPort: 9696
+
+    - protocol: TCP
+      name: readarr
+      port: 8787
+      targetPort: 8787
+
+    - protocol: TCP
+      name: radarr
+      port: 7878
+      targetPort: 7878
+
+    - protocol: TCP
+      name: sonarr
+      port: 8989
+      targetPort: 8989
