--- a/config/nginx/conf.d/tv.conf
+++ b/config/nginx/conf.d/tv.conf
@@ -13,6 +13,6 @@ server {
     include authelia-proxy.conf;
     include authelia-endpoint.conf;
 
-    proxy_pass http://vpn:8989;
+    proxy_pass http://sonarr;
   }
 }
