rm readarr, specify vpn configs

--- a/config/nginx/conf.d/lib.conf
+++ b/config/nginx/conf.d/lib.conf
@@ -16,7 +16,7 @@ server {
     proxy_set_header        X-Scheme        $scheme;
 
     proxy_bind              $server_addr;
-    proxy_pass              http://calibre;
+    proxy_pass              http://calibre-web;
   }
 
   location ~ (/calibre)?/opds {
@@ -28,6 +28,6 @@ server {
     proxy_set_header        X-Scheme        $scheme;
 
     proxy_bind              $server_addr;
-    proxy_pass              http://calibre;
+    proxy_pass              http://calibre-web;
   }
 }
