--- a/config/nginx/conf.d/calibre.conf
+++ b/config/nginx/conf.d/calibre.conf
@@ -7,11 +7,11 @@ server {
   fastcgi_buffers 16 16k;
   fastcgi_buffer_size 32k;
 
-  # include authelia-location.conf;
+  include authelia-location.conf;
 
   location / {
-    # include authelia-proxy.conf;
-    # include authelia-endpoint.conf;
+    include authelia-proxy.conf;
+    include authelia-endpoint.conf;
 
     proxy_set_header Authorization $http_authorization;
     proxy_pass_header Authorization;
