--- a/config/borgmatic/config.yaml
+++ b/config/borgmatic/config.yaml
@@ -15,6 +15,15 @@ source_directories:
   - /bulk/application/sonarr
   - /bulk/shared/books
 
+retention:
+  keep_within: 3H
+  keep_minutely: 60
+  keep_hourly: 24
+  keep_daily: 7
+  keep_weekly: 4
+  keep_monthly: 6
+  keep_yearly: 1
+
 postgresql_databases:
   - name: postgres
     hostname: giteadb
