lazy nginx approach

--- a/config/nginx/conf.d/lib.conf
+++ b/config/nginx/conf.d/lib.conf
@@ -30,4 +30,16 @@ server {
     proxy_bind              $server_addr;
     proxy_pass              http://calibre-web;
   }
+
+  location ~ (/calibre)?/kobo {
+
+    rewrite /calibre(.*) $1 break;
+
+    proxy_set_header        Host            $http_host;
+    proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header        X-Scheme        $scheme;
+
+    proxy_bind              $server_addr;
+    proxy_pass              http://calibre-web;
+  }
 }
