Initial kasm desktop deployment

--- a/templates/vpn/depl.yaml
+++ b/templates/vpn/depl.yaml
@@ -130,6 +130,21 @@ spec:
               mountPath: /config
               subPath: application/prowlarr
 
+        - name: kasm
+          image: {{ .Values.image_kasm }}
+          ports:
+            - containerPort: 6901
+
+        - name: prowlarr
+          image: {{ .Values.image_prowlarr }}
+          ports:
+            - containerPort: 9696
+
+          volumeMounts:
+            - name: data
+              mountPath: /config
+              subPath: application/prowlarr
+
         - name: thelounge
           image: {{ .Values.image_thelounge }}
           ports:
