wip, trying to get proxy working

--- a/config/nginx/conf.d/kasm.conf
+++ b/config/nginx/conf.d/kasm.conf
@@ -15,6 +15,6 @@ server {
 
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "Upgrade";
-    proxy_pass http://vpn:6901;
+    proxy_pass https://vpn:6901;
   }
 }
