--- a/templates/vpn/depl.yaml
+++ b/templates/vpn/depl.yaml
@@ -69,13 +69,13 @@ spec:
               readOnly: true
 
           # Hooks to guarantee we connected to target IP & stayed connected.
-          lifecycle:
-            postStart:
-              exec:
-                command:
-                  - sh
-                  - -c
-                  - sleep 30 && until curl --connect-timeout 10 ifconfig.me | grep -i "{{ .Values.qbittorrentIp }}"; do echo "Waiting for ifconfig response"; sleep 10; done;
+          # lifecycle:
+          #   postStart:
+          #     exec:
+          #       command:
+          #         - sh
+          #         - -c
+          #         - sleep 30 && until curl --connect-timeout 10 ifconfig.me | grep -i "{{ .Values.qbittorrentIp }}"; do echo "Waiting for ifconfig response"; sleep 10; done;
           securityContext:
             privileged: true
             capabilities:
@@ -134,6 +134,10 @@ spec:
           image: {{ .Values.image_kasm }}
           ports:
             - containerPort: 6901
+
+          env:
+            - name: VNC_PW
+              value: abc123
 
         - name: prowlarr
           image: {{ .Values.image_prowlarr }}
