--- a/values/shared.yaml
+++ b/values/shared.yaml
@@ -25,4 +25,4 @@ image_loki: "grafana/loki:3.0.0"
 image_registry: "registry:2"
 image_borgmatic: "b3vis/borgmatic:1.8"
 image_thelounge: "linuxserver/thelounge:4.4.3-next"
-image_kasm: "kasmweb/desktop:1.14.0-rolling"
+image_kasm: "kasmweb/chrome:1.14.0"
