--- a/config/nginx/conf.d/browser.conf
+++ b/config/nginx/conf.d/browser.conf
@@ -2,16 +2,16 @@ server {
   listen 443 ssl;
   include https.conf;
 
-  server_name kasm.*;
+  server_name browser.*;
 
   fastcgi_buffers 16 16k;
   fastcgi_buffer_size 32k;
 
-  # include authelia-location.conf
+  include authelia-location.conf;
 
   location / {
-    # include authelia-proxy.conf;
-    # include authelia-endpoint.conf;
+    include authelia-proxy.conf;
+    include authelia-endpoint.conf;
 
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "Upgrade";
