Cut a bunch of the calibre / webvpn stuff

--- a/config/nginx/conf.d/trackers.conf
+++ b/config/nginx/conf.d/trackers.conf
@@ -16,6 +16,6 @@ server {
     include authelia-proxy.conf;
     include authelia-endpoint.conf;
 
-    proxy_pass http://vpn:9696;
+    proxy_pass http://prowlarr;
   }
 }
