Change mount path of wg config

--- a/templates/vpn/depl.yaml
+++ b/templates/vpn/depl.yaml
@@ -59,7 +59,7 @@ spec:
 
           volumeMounts:
             - name: wireguard-key
-              mountPath: /config/wg0.conf
+              mountPath: /config/wg_confs/wg0.conf
               subPath: value 
 
             - mountPath: /lib/modules
