--- a/templates/vpn/depl.yaml
+++ b/templates/vpn/depl.yaml
@@ -83,62 +83,62 @@ spec:
                 - NET_RAW
                 - SYS_MODULE
 
-        - name: qbittorrent
-          image: {{ .Values.image_qbittorrent }}
-          ports:
-            - containerPort: 8080
-            - containerPort: 6881
+        # - name: qbittorrent
+        #   image: {{ .Values.image_qbittorrent }}
+        #   ports:
+        #     - containerPort: 8080
+        #     - containerPort: 6881
 
-          env:
-            - name: PUID
-              value: "0"
+        #   env:
+        #     - name: PUID
+        #       value: "0"
 
-            - name: PGID
-              value: "0"
+        #     - name: PGID
+        #       value: "0"
 
-          volumeMounts:
-            - name: data
-              mountPath: /config
-              subPath: application/qbittorrent
+        #   volumeMounts:
+        #     - name: data
+        #       mountPath: /config
+        #       subPath: application/qbittorrent
 
-            - name: data
-              mountPath: /shared/torrents
-              subPath: shared/torrents 
+        #     - name: data
+        #       mountPath: /shared/torrents
+        #       subPath: shared/torrents 
 
-            - name: data
-              mountPath: /shared/upload
-              subPath: shared/upload
+        #     - name: data
+        #       mountPath: /shared/upload
+        #       subPath: shared/upload
 
-            - name: cache-data
-              mountPath: /cache/torrents
-              subPath: shared/torrents
+        #     - name: cache-data
+        #       mountPath: /cache/torrents
+        #       subPath: shared/torrents
 
-        - name: thelounge
-          image: {{ .Values.image_thelounge }}
-          ports:
-            - containerPort: 9000
+        # - name: thelounge
+        #   image: {{ .Values.image_thelounge }}
+        #   ports:
+        #     - containerPort: 9000
 
-          env:
-            - name: PUID
-              value: "0"
+        #   env:
+        #     - name: PUID
+        #       value: "0"
 
-            - name: PGID
-              value: "0"
+        #     - name: PGID
+        #       value: "0"
 
-          volumeMounts:
-            - name: data
-              mountPath: /config/logs
-              subPath: application/thelounge/logs
+        #   volumeMounts:
+        #     - name: data
+        #       mountPath: /config/logs
+        #       subPath: application/thelounge/logs
 
-            - name: data
-              mountPath: /config/users
-              subPath: application/thelounge/users
+        #     - name: data
+        #       mountPath: /config/users
+        #       subPath: application/thelounge/users
 
-            - name: data
-              mountPath: /config/packages
-              subPath: application/thelounge/packages
+        #     - name: data
+        #       mountPath: /config/packages
+        #       subPath: application/thelounge/packages
 
-            - name: vpn-configs
-              mountPath: /config/config.js
-              subPath: config.js
-              readOnly: false
+        #     - name: vpn-configs
+        #       mountPath: /config/config.js
+        #       subPath: config.js
+        #       readOnly: false
