--- a/templates/vpn/depl.yaml
+++ b/templates/vpn/depl.yaml
@@ -59,7 +59,7 @@ spec:
 
           volumeMounts:
             - name: wireguard-key
-              mountPath: /config/wg_confs/wg0.conf
+              mountPath: /config/wg0.conf
               subPath: value 
 
             - mountPath: /lib/modules
@@ -67,13 +67,13 @@ spec:
               readOnly: true
 
           # Hooks to guarantee we connected to target IP & stayed connected.
-          # lifecycle:
-          #   postStart:
-          #     exec:
-          #       command:
-          #         - sh
-          #         - -c
-          #         - sleep 30 && until curl --connect-timeout 10 ifconfig.me | grep -i "{{ .Values.qbittorrentIp }}"; do echo "Waiting for ifconfig response"; sleep 10; done;
+          lifecycle:
+            postStart:
+              exec:
+                command:
+                  - sh
+                  - -c
+                  - sleep 30 && until curl --connect-timeout 10 ifconfig.me | grep -i "{{ .Values.qbittorrentIp }}"; do echo "Waiting for ifconfig response"; sleep 10; done;
           securityContext:
             privileged: true
             capabilities:
@@ -83,62 +83,62 @@ spec:
                 - NET_RAW
                 - SYS_MODULE
 
-        # - name: qbittorrent
-        #   image: {{ .Values.image_qbittorrent }}
-        #   ports:
-        #     - containerPort: 8080
-        #     - containerPort: 6881
+        - name: qbittorrent
+          image: {{ .Values.image_qbittorrent }}
+          ports:
+            - containerPort: 8080
+            - containerPort: 6881
 
-        #   env:
-        #     - name: PUID
-        #       value: "0"
+          env:
+            - name: PUID
+              value: "0"
 
-        #     - name: PGID
-        #       value: "0"
+            - name: PGID
+              value: "0"
 
-        #   volumeMounts:
-        #     - name: data
-        #       mountPath: /config
-        #       subPath: application/qbittorrent
+          volumeMounts:
+            - name: data
+              mountPath: /config
+              subPath: application/qbittorrent
 
-        #     - name: data
-        #       mountPath: /shared/torrents
-        #       subPath: shared/torrents 
+            - name: data
+              mountPath: /shared/torrents
+              subPath: shared/torrents 
 
-        #     - name: data
-        #       mountPath: /shared/upload
-        #       subPath: shared/upload
+            - name: data
+              mountPath: /shared/upload
+              subPath: shared/upload
 
-        #     - name: cache-data
-        #       mountPath: /cache/torrents
-        #       subPath: shared/torrents
+            - name: cache-data
+              mountPath: /cache/torrents
+              subPath: shared/torrents
 
-        # - name: thelounge
-        #   image: {{ .Values.image_thelounge }}
-        #   ports:
-        #     - containerPort: 9000
+        - name: thelounge
+          image: {{ .Values.image_thelounge }}
+          ports:
+            - containerPort: 9000
 
-        #   env:
-        #     - name: PUID
-        #       value: "0"
+          env:
+            - name: PUID
+              value: "0"
 
-        #     - name: PGID
-        #       value: "0"
+            - name: PGID
+              value: "0"
 
-        #   volumeMounts:
-        #     - name: data
-        #       mountPath: /config/logs
-        #       subPath: application/thelounge/logs
+          volumeMounts:
+            - name: data
+              mountPath: /config/logs
+              subPath: application/thelounge/logs
 
-        #     - name: data
-        #       mountPath: /config/users
-        #       subPath: application/thelounge/users
+            - name: data
+              mountPath: /config/users
+              subPath: application/thelounge/users
 
-        #     - name: data
-        #       mountPath: /config/packages
-        #       subPath: application/thelounge/packages
+            - name: data
+              mountPath: /config/packages
+              subPath: application/thelounge/packages
 
-        #     - name: vpn-configs
-        #       mountPath: /config/config.js
-        #       subPath: config.js
-        #       readOnly: false
+            - name: vpn-configs
+              mountPath: /config/config.js
+              subPath: config.js
+              readOnly: false
