--- a/config/borgmatic/config.yaml
+++ b/config/borgmatic/config.yaml
@@ -14,6 +14,7 @@ source_directories:
   - /bulk/application/radarr
   - /bulk/application/sonarr
   - /bulk/application/immich/media
+  - /bulk/application/syncthing
   - /bulk/shared/books
 
 retention:
