--- a/templates/immich/depl.yaml
+++ b/templates/immich/depl.yaml
@@ -44,47 +44,15 @@ spec:
               mountPath: /cache
               subPath: application/immich/models
 
-        - name: immich-microservices
-          image: {{ .Values.image_immich_server }}
-          command: ['/bin/bash']
-          args: ['start.sh', 'microservices']
-          env:
-            - name: DB_USERNAME
-              value: postgres
+          env: 
+            - name: IMMICH_PORT
+              value: '3003'
 
-            - name: DB_DATABASE_NAME
-              value: postgres
-
-            - name: DB_HOSTNAME
-              value: immichdb
-
-            - name: REDIS_HOSTNAME
+            - name: IMMICH_HOST
               value: localhost
-
-            - name: UPLOAD_LOCATION
-              value: /usr/src/app/upload
-
-            - name: IMMICH_MEDIA_LOCATION
-              value: /usr/src/app/media
-
-            - name: DB_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: immich.db.password
-                  key: value
-
-          volumeMounts:
-            - name: data
-              mountPath: /usr/src/app/upload
-              subPath: application/immich/upload
-            - name: data
-              mountPath: /usr/src/app/media
-              subPath: application/immich/media
 
         - name: immich-server
           image: {{ .Values.image_immich_server }}
-          command: ['/bin/bash']
-          args: ['start.sh', 'immich']
           ports:
             - containerPort: 3001
           env:
@@ -96,6 +64,12 @@ spec:
 
             - name: DB_HOSTNAME
               value: immichdb
+
+            - name: IMMICH_PORT
+              value: '3001'
+
+            - name: IMMICH_HOST
+              value: localhost
 
             - name: REDIS_HOSTNAME
               value: localhost
