chore(config): Allow api passthrough for radarr, sonarr (#65)
Reviewed-on: https://git.kwkaiser.io/kwkaiser/homelab-application/pulls/65

--- a/config/nginx/conf.d/scurvy.conf
+++ b/config/nginx/conf.d/scurvy.conf
@@ -15,4 +15,34 @@ server {
 
     proxy_pass http://vpn:8080;
   }
+
+  # location ~ (/qbittorrent)?/api {
+  #   rewrite /qbittorrent(.*) $1 break;
+  #   proxy_pass http://vpn:8080;
+  # }
+
+  # location ~ (/qbittorrent)?/command {
+  #   rewrite /qbittorrent(.*) $1 break;
+  #   proxy_pass http://vpn:8080;
+  # }
+
+  # location ~ (/qbittorrent)?/css {
+  #   rewrite /qbittorrent(.*) $1 break;
+  #   proxy_pass http://vpn:8080;
+  # }
+
+  # location ~ (/qbittorrent)?/login {
+  #   rewrite /qbittorrent(.*) $1 break;
+  #   proxy_pass http://vpn:8080;
+  # }
+
+  # location ~ (/qbittorrent)?/sync {
+  #   rewrite /qbittorrent(.*) $1 break;
+  #   proxy_pass http://vpn:8080;
+  # }
+
+  # location ~ (/qbittorrent)?/scripts {
+  #   rewrite /qbittorrent(.*) $1 break;
+  #   proxy_pass http://vpn:8080;
+  # }
 }
