enhancement(mealie): Add mealie deployment (#103)
Reviewed-on: https://git.kwkaiser.io/kwkaiser/homelab-application/pulls/103
Co-authored-by: Karl Kaiser <karl@kwkaiser.io>
Co-committed-by: Karl Kaiser <karl@kwkaiser.io>

--- a/config/borgmatic/config.yaml
+++ b/config/borgmatic/config.yaml
@@ -41,6 +41,12 @@ postgresql_databases:
     password: ${IMMICH_DB_PASSWORD}
     format: tar
 
+  - name: postgres
+    hostname: mealiedb
+    username: postgres
+    password: ${MEALIE_DB_PASSWORD}
+    format: tar
+
 repositories:
   - path: /raw-backup
     label: local
