--- a/templates/borgmatic/cron.yaml
+++ b/templates/borgmatic/cron.yaml
@@ -59,6 +59,12 @@ spec:
                       name: immich.db.password
                       key: value
 
+                - name: MEALIE_DB_PASSWORD
+                  valueFrom:
+                    secretKeyRef:
+                      name: mealie.db.password
+                      key: value
+
                 - name: LINODE_CLI_OBJ_ACCESS_KEY
                   valueFrom:
                     secretKeyRef:
@@ -113,6 +119,12 @@ spec:
                   valueFrom:
                     secretKeyRef:
                       name: immich.db.password
+                      key: value
+
+                - name: MEALIE_DB_PASSWORD
+                  valueFrom:
+                    secretKeyRef:
+                      name: mealie.db.password
                       key: value
 
                 - name: LINODE_CLI_OBJ_ACCESS_KEY
