--- a/values/shared.yaml
+++ b/values/shared.yaml
@@ -30,3 +30,5 @@ image_immich_db: "registry.hub.docker.com/tensorchord/pgvecto-rs:pg14-v0.2.0@sha
 image_immich_redis: "redis:7.4.0-bookworm"
 image_immich_ml: "ghcr.io/immich-app/immich-machine-learning:v1.108.0"
 image_immich_server: "ghcr.io/immich-app/immich-server:v1.108.0"
+image_mealie_db: "postgres:16.4-alpine3.19"
+image_mealie: "hkotel/mealie:v1.11.0"
